--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,13 @@
 :root {
     --title-color: #322153;
-    --pimary-color: #34cb79;
+    --primary-color: #34cb79;
 }
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
 }
 
 html {
@@ -26,116 +28,3 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--title-color);
 }
 
-#page-home {
-    height: 100vh;
-    background: url('../assets/home-background.svg') no-repeat;
-    background-position: 35vw bottom;
-}
-
-
-#page-home .content {
-    width: 90%;
-    height: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-}
-
-#page-home header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 48px;
-}
-
-#page-home header a {
-    display: flex;
-    color: var(--title-color);
-    font-weight: bold;
-}
-
-#page-home header span {
-    background-image: url('../assets/log-in.svg');
-    display: flex;
-    width: 20px;
-    height: 20px;
-    margin-right: 16px;
-}
-
-#page-home main {
-    max-width: 560px;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    justify-content: center;
-}
-
-#page-home main h1 {
-    font-size: 54px;
-}
-
-#page-home main p {
-    font-size: 24px;
-    line-height: 38px;
-    margin-top: 24px;
-}
-
-#page-home main a {
-    width: 100%;
-    max-width: 360px;
-    height: 72px;
-    background-color: var(--pimary-color);
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-    border-radius: 8px;
-    transition: 400ms;
-}
-
-#page-home main a:hover {
-    background-color: #2fd86e;
-}
-
-#page-home main a span {
-    width: 72px;
-    height: 72px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.08);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#page-home main a span::after {
-    content: "";
-    background-image: url(../assets/search.svg);
-    width: 20px;
-    height: 20px;
-}
-
-#page-home main a strong {
-    color: white;
-    flex: 1;
-    text-align: center;
-}
-
-@media (max-width: 900px) {
-    #page-home {
-        background-position-x: 70vw;
-    }
-    #page-homem .content {
-        align-items: center;
-        text-align: center;
-    }
-    #page-home header a {
-        position: absolute;
-        bottom: 48px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    #page-home main {
-        align-items: center;
-    }
-}
