--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,54 +1,35 @@
-<html lang="pt-br">
+{% extends "layout.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ecoleta</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
-  <link rel="stylesheet" href="styles/main.css">
+{% set pageId = "page-home" %}
+
+{% block styles %}
   <link rel="stylesheet" href="styles/home.css">
   <link rel="stylesheet" href="styles/modal.css">
-  <link rel="stylesheet" href="styles/responsive.css">
-</head>
+{% endblock styles %}
 
-<body>
 
-  <div id="page-home">
-    <div class="content">
-      <header>
-        <img src="assets/logo.svg" alt="Logo Ecoleta">
-        <a href="create-point.html">
-          <span></span>
-          Cadastre um ponto de coleta</a>
-      </header>
-      <main>
-        <h1 class="red">Seu marketplace de coleta de resíduos</h1>
-        <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-        <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
-      </main>      
-    </div>
+
+
+{% block content %}
+  <div class="content">
+    <header>
+      <img src="assets/logo.svg" alt="Logo Ecoleta">
+      <a href="create-point">
+        <span></span>
+        Cadastre um ponto de coleta</a>
+    </header>
+    <main>
+      <h1 class="red">Seu marketplace de coleta de resíduos</h1>
+      <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
+      <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
+    </main>      
   </div>
+{% endblock content %}
 
-  <div id="modal" class="hide">
-    <div class="content">
-      <div class="header">
-        <h1>Pontos de Coleta</h1>
-        <a href="#">Fechar</a>
-      </div>
-      <form action="/search-results.html">
-        <label for="search">Cidade</label>
-        <div class="search field">
-          <input type="text" name="search" placeholder="Pesquise por Cidade">
-          <button>
-            <img src="assets/search.svg" alt="Buscar">
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
+{% block modal %}
+  {% include "partials/modal.html" %}
+{% endblock modal %}
 
-<script src="script/index.js"></script>
-</body>
-
-</html>
+{% block scripts %}
+  <script src="script/index.js"></script>
+{% endblock scripts %}
