--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -45,12 +45,19 @@ form fieldset {
 
 form legend {
     margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+form legend span {
+    font-size: 14px;
+    color: var(--title-color);
 }
 
 form legend h2 {
     font-size: 24px;
 }
-
 form .field {
     display: flex;
     flex-direction: column;
