--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -21,9 +21,25 @@
         <h2>Dados da Entidade</h2>
       </legend>
 
-      <div class="field">
-        <label for="name">Nome da Entidade</label>
-        <input type="text" name="name" required="required">
+     
+
+      <div class="field-group">
+         <div class="field">
+         <label for="name">Nome da Entidade</label>
+          <input 
+            type="text" 
+            name="name" 
+            required="required">
+        </div>
+
+        <div class="field">
+          <label for="name">Imagem da Entidade</label>
+          <input 
+           type="url" 
+            name="image" 
+            placeholder="http://"
+            required="required">
+        </div>
       </div>
 
       <div class="field-group">
@@ -60,6 +76,7 @@
     <fieldset>
       <legend>
         <h2>Itens de Coleta</h2>
+        <span>Selecione um ou mais itens abaixo</span>
       </legend>
 
       <div class="items-grid">
