--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -76,3 +76,14 @@
 #modal form button:hover {
     background-color: #2fb86e;
 }
+
+#modal.point .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modal.point h1 {
+    color: white;
+    margin-top: 32px;
+}
