--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,11 +1,16 @@
+body {
+    background-color: white;
+}
+
 body::after {
     content: "";
-    background: white;
-    position: fixed;
-    top: 260px;
+    background: #f0f0f5;
+    position: absolute;
+    top: 0;
     bottom: 0;
     right: 0;
     left: 0;
+    height: 16rem;
     z-index: -1;
 }
 
