--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,13 +8,14 @@
 
 {% block styles %}
   <link rel="stylesheet" href="styles/create-point.css">
+  <link rel="stylesheet" href="styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
 
   {% include "partials/page-header.html" %}
 
-  <form action="">
+  <form action="/savepoint" method="POST">
     <h1>Cadastro do Ponto de Coleta</h1>
     <fieldset>
       <legend>
@@ -80,27 +81,27 @@
       </legend>
 
       <div class="items-grid">
-        <li data-id="1"><img src="assets/lampadas.svg" alt="Lâmpadas">
+        <li data-id="Lâmpadas"><img src="assets/lampadas.svg" alt="Lâmpadas">
           <span>Lâmpadas</span>
         </li>
 
-        <li data-id="2"><img src="assets/baterias.svg" alt="Pilhas e Baterias">
+        <li data-id="Pilhas e Baterias"><img src="assets/baterias.svg" alt="Pilhas e Baterias">
           <span>Pilhas e Baterias</span>
         </li>
 
-        <li data-id="3"><img src="assets/papeis-papelao.svg" alt="Papéis e Papelão">
+        <li data-id="Papéis e Papelão"><img src="assets/papeis-papelao.svg" alt="Papéis e Papelão">
           <span>Papéis e Papelão</span>
         </li>
 
-        <li data-id="4"><img src="assets/eletronicos.svg" alt="Resíduos Eletrônicos">
+        <li data-id="Resíduos Eletrônicos"><img src="assets/eletronicos.svg" alt="Resíduos Eletrônicos">
           <span>Resíduos Eletrônicos</span>
         </li>
 
-        <li data-id="5"><img src="assets/organicos.svg" alt="Resíduos Orgânicos">
+        <li data-id="Resíduos Orgânicos"><img src="assets/organicos.svg" alt="Resíduos Orgânicos">
           <span>Resíduos Orgânicos</span>
         </li>
 
-        <li data-id="6"><img src="assets/oleo.svg" alt="Óleo de Cozinha">
+        <li data-id="Óleo de Cozinha"><img src="assets/oleo.svg" alt="Óleo de Cozinha">
           <span>Óleo de Cozinha</span>
         </li>
       </div>
@@ -111,6 +112,14 @@
     <button type="submit">Cadastrar Ponto de Coleta</button>
   </form>
 {% endblock content %}
+
+
+{% block modal %}
+  {% if saved %}
+    {% include "partials/point-created.html" %}
+  {% endif %}
+{% endblock modal %}
+
 
 {% block scripts %}
   <script src="script/create-point.js"></script>
